sandbox-codebase/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAA</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>Exhibit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>