sandbox-codebase/objects/Contract/fields/End_Price__c.field-meta.xml
<CustomField>
    <fullName>End_Price__c</fullName>
    <label>End Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>