sandbox-codebase/objects/Contract/fields/International_access_to_data_restriction__c.field-meta.xml
<CustomField>
    <fullName>International_access_to_data_restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International access to data restriction</label>
    <type>Checkbox</type>
</CustomField>