sandbox-codebase/objects/Contract/fields/Price_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_Change_Date__c</fullName>
    <label>Price Change Date</label>
    <type>Date</type>
</CustomField>