sandbox-codebase/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contract_Type__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Start_Price__c</columns>
    <columns>End_Price__c</columns>
    <columns>Price_Change_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>